# Pixelate

./: .gitignore  CMakeLists.txt  LearnOpenGL.sln  README.md  glad.c
LearnOpenGL/: LearnOpenGL.vcxproj
LearnOpenGL/res/shaders/: Basic.shader
LearnOpenGL/src/: Application.cpp
Triangle/: Camera.h  Shader.h  main.cpp  shader.vs
include/: Camera.h  Shader.h
resources/: shader.fs  shader.vs  textureshader.fs
src/: Application.cpp  Camera.cpp  Shader.cpp
vendors/GLAD/include/glad/: glad.h
vendors/GLAD/src/: glad.c
vendors/STB_IMAGE/: CMakeLists.txt
